05-Terraform-Loops-MetaArguments-SplatOperator/05-01-MetaArgument-Count-For-Loops-Lists-Maps/terraform-manifests/c5-ec2instance.tf
resource "aws_instance" "myec2vm" {
  ami                    = data.aws_ami.amzlinux2.id
  # instance_type          = var.instance_type
  instance_type = var.instance_type_list[0] #For List
  # instance_type = var.instance_type_map[0] #For Map
  user_data              = file("${path.module}/app1-install.sh")
  key_name               = var.instance_keypair
  vpc_security_group_ids = [aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id]
  count = 2
  tags = {
    "Name" = "Count-Demo-${count.index}"
  }
}
